--- a/app/src/main/res/layout/activity_details_page.xml
+++ b/app/src/main/res/layout/activity_details_page.xml
@@ -6,4 +6,17 @@
     android:layout_height="match_parent"
     tools:context=".DetailsPageActivity">
 
+
+    <ListView
+        android:id="@+id/lv_detailsList"
+        android:layout_width="match_parent"
+        android:layout_height="490dp"
+        android:focusableInTouchMode="false"
+        android:isScrollContainer="false"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.211" />
 </androidx.constraintlayout.widget.ConstraintLayout>
