Added comments for what is left to be done. Working with the database is intimidating and we need to query everything

--- a/app/src/main/res/layout/activity_enter_data.xml
+++ b/app/src/main/res/layout/activity_enter_data.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".EnterDataActivity">
 
+
     <EditText
         android:id="@+id/edt_spending_info"
         android:layout_width="wrap_content"
@@ -104,5 +105,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.277" />
+
+    <Switch
+        android:id="@+id/sw_reccuring"
+        android:layout_width="161dp"
+        android:layout_height="40dp"
+        android:text="Reccuring?"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.556"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.499" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
