Budget Breakdown has listview with reccuring data

--- a/app/src/main/res/layout/activity_breakdown_page.xml
+++ b/app/src/main/res/layout/activity_breakdown_page.xml
@@ -6,27 +6,15 @@
     android:layout_height="match_parent"
     tools:context=".BreakdownPageActivity">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Total Monthly Spending:"
+    <ListView
+        android:id="@+id/lv_breakdown"
+        android:layout_width="409dp"
+        android:layout_height="617dp"
+        android:focusableInTouchMode="false"
+        android:isScrollContainer="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.061"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.119" />
-
-    <TextView
-        android:id="@+id/monthly_total"
-        android:layout_width="81dp"
-        android:layout_height="27dp"
-        android:text="$0"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.202"
-        app:layout_constraintStart_toEndOf="@+id/textView"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.12" />
+        app:layout_constraintVertical_bias="1.0" />
 </androidx.constraintlayout.widget.ConstraintLayout>
