--- a/app/src/main/res/layout/activity_adult_style.xml
+++ b/app/src/main/res/layout/activity_adult_style.xml
@@ -50,7 +50,7 @@
         android:layout_marginTop="30dp"
         android:layout_marginEnd="99dp"
         android:ems="10"
-        android:text="Yearly car insurance cost:"
+        android:text="Monthly car insurance cost:"
         android:textSize="18sp"
         android:visibility="invisible"
         tools:ignore="UseSwitchCompatOrMaterialXml" />
@@ -66,7 +66,7 @@
         android:layout_marginTop="11dp"
         android:layout_marginEnd="201dp"
         android:ems="10"
-        android:hint="$/Year"
+        android:hint="$/Month"
         android:inputType="numberDecimal"
         android:text=""
         android:textSize="18sp"
@@ -125,7 +125,7 @@
         android:layout_marginTop="147dp"
         android:layout_marginEnd="87dp"
         android:ems="10"
-        android:text="Yearly property insurance cost:"
+        android:text="Monthly property insurance cost:"
         android:textSize="18sp"
         android:visibility="invisible"
         tools:ignore="UseSwitchCompatOrMaterialXml" />
@@ -142,7 +142,7 @@
         android:layout_marginTop="128dp"
         android:layout_marginEnd="203dp"
         android:ems="10"
-        android:hint="$/Year"
+        android:hint="$/Month"
         android:inputType="numberDecimal"
         android:text=""
         android:textSize="18sp"
