--- a/app/src/main/res/layout/activity_student_style.xml
+++ b/app/src/main/res/layout/activity_student_style.xml
@@ -121,7 +121,7 @@
         android:layout_marginTop="107dp"
         android:layout_marginEnd="201dp"
         android:ems="10"
-        android:hint="$/Week"
+        android:hint="$/Month"
         android:inputType="numberDecimal"
         android:text=""
         android:textSize="18sp"
