Home screen fragments are working

--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -41,7 +41,7 @@
         android:id="@+id/btn_wants"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Wants"
+        android:text="Net Budget"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/btn_needs"
@@ -51,7 +51,7 @@
         android:id="@+id/btn_needs"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Needs"
+        android:text="Spending"
         app:layout_constraintEnd_toStartOf="@+id/btn_wants"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
