--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -70,5 +70,18 @@
         app:layout_constraintVertical_bias="0.14"
         tools:srcCompat="@tools:sample/avatars" />
 
+    <ProgressBar
+        android:id="@+id/pb_mainScreen"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="95dp"
+        android:layout_height="84dp"
+        android:visibility="visible"
+        app:layout_constraintBottom_toTopOf="@+id/et_Email"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        app:layout_constraintVertical_bias="0.464" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
